@@ -1,6 +1,11 @@
 2007-11-20  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
+	More work on file copies
+
+2007-11-20  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
 	Add error handling for source scanning
 
 2007-11-19  Alexander Larsson  <alexl@redhat.com>
